--- a/index.html
+++ b/index.html
@@ -6,15 +6,30 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="titulo-principal">A Entrevista</h1>
+    <div class="container">
+        <h1 class="titulo-principal">A ENTREVISTA</h1>
 
-    <img src="" alt="" class="logo">
+        <img src="" alt="" class="logo">
 
-    <section class="elenco">
-        <img src="" alt="" class="James Franco">
-        <img src="https://resizing.flixster.com/_xH8v9dXwI4MxX-T47kvWpjqsPU=/218x280/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/167023_v9_bb.jpg" alt="" class="Seth Roger">
-        <img src="" alt="" class="Randall Park">
-    </section>
+        <div class="elenco">
+            <div class="ator">
+                <img src="https://br.web.img2.acsta.net/pictures/18/07/27/21/32/0265618.jpg" alt="" class="James Franco">
+            </div>
+
+            <div class="ator">
+                <img src="https://resizing.flixster.com/_xH8v9dXwI4MxX-T47kvWpjqsPU=/218x280/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/167023_v9_bb.jpg" alt="" class="Seth Roger">
+            </div>
+
+            <div class="ator">    
+                <img src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-760w,f_auto,q_auto:best/newscms/2014_51/816186/141219-year-ender-park.jpg" alt="" class="Randall Park">
+            </div>
+        </div>
+
+        <div class="sinopse">
+            <h1 class="titulo-sinopse">sinopse</h1>
+
+        </div>
+    </div>
 
 </body>
 </html>
